# mcmaster-chatbot

./: README.md  __main__.py  chat_bot.py  data.json  data_set.py  exceptions.py  intents.json  project.py  pyproject.toml  requirements.txt  utils.py
chatbot/: __init__.py  __main__.py  bot.py  data_cleaner.py  data_set.py  neural_network.py
